fix: fix z-indexes in O_Footer

--- a/src/components/organisms/O_Footer/O_Footer.module.scss
+++ b/src/components/organisms/O_Footer/O_Footer.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   bottom: calc(calc(30px + calc(calc($space * 10) + 20vh)) * -1);
   position: absolute;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   gap: $double-average-gap;
